# s3-platform-plugin-package

./: CONTRIBUTING.md  LICENSE  README.md  cookiecutter.json  main.py  pyproject.toml
.github/workflows/: test.yml
hooks/: post_gen_project.py  pre_gen_project.py
{{ cookiecutter.project_name }}/: LICENSE  plugin.xml  pyproject.toml  readme.md
{{ cookiecutter.project_name }}/.github/workflows/: build-release.yml  plugin_test.yml  sync-release.yml
{{ cookiecutter.project_name }}/src/{{ cookiecutter.project_slug }}/: config.py  {{ cookiecutter.source_uniq_name }}.py
{{ cookiecutter.project_name }}/tests/: test_plugin_readme.py
{{ cookiecutter.project_name }}/tests/fixtures/: payload_class.py
