[tool.poetry]
name = "{{ cookiecutter.project_name }}"
version = "{{ cookiecutter.version }}"
description = "{{ cookiecutter.project_short_description }}"
authors = [
    "{{ cookiecutter.github_username }}, {{ cookiecutter.full_name }} <{{ cookiecutter.email }}>"
]
readme = "readme.md"

[tool.poetry.dependencies]
python = "^3.11"
s3p-sdk = "{{ cookiecutter.platform_version }}"


[tool.poetry.group.test.dependencies]
pytest = "^8.2.2"
pytest-timeout = "^2.3.1"


{%- if cookiecutter.use_selenium == "y" -%}
# Possible Selenium content here
[tool.poetry.group.optionally.dependencies]
selenium = "4.15.2"
{% endif %}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
